@@ -1523,6 +1523,7 @@ List of 2
 > pairs(USJudgeRatings, lower.panel=panel.smooth, upper.panel=panel.cor)
 > 
 > pairs(iris[-5], log = "xy") # plot all variables on log scale
+> pairs(iris, log = 1:4)
 > 
 > 
 > 
